<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_task"
        layout="@layout/toolbar" />

    <!-- task name -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/taskname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- task date-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- task date-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/dateformat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonForDate"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_date"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonForDate"
            android:layout_width="102dp"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:text="@string/buttonDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutDate"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- task hour-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayouttime"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- task date-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/timeformat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonForTime"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_time"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusable="false"
                android:focusableInTouchMode="false"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonForTime"
            android:layout_width="102dp"
            android:layout_height="49dp"
            android:layout_marginTop="8dp"
            android:text="@string/buttonTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutTime"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- task priority-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/taskpriority">

        <TextView
            android:id="@+id/priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskpriority"/>
        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>


    </com.google.android.material.textfield.TextInputLayout>

    <!-- task class-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/taskclass">

        <TextView
            android:id="@+id/class_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taskclass"/>
        <Spinner
            android:id="@+id/class_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>


    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>